--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>gaurav alva</h1>
+    <div class="container">
+        <div class="list">
+            <a href="o"><ul>home</ul></a>
+                <a href="o"><ul>about</ul></a>
+                    <a href="o"><ul>contacts</ul></a>
+        </div>
+    </div>
 </body>
 </html>
